samples/_failures_safe/1761141117_06e20b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_73700751.c: In function ‘main’:
./samples/SAFE/__tmp_73700751.c:183:45: error: expected ‘)’ at end of input
  183 |     printf("Tokens found: %d\n", token_count
      |           ~                                 ^
      |                                             )
./samples/SAFE/__tmp_73700751.c:183:5: error: expected declaration or statement at end of input
  183 |     printf("Tokens found: %d\n", token_count
      |     ^~~~~~
